--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+    properties:
+      hibernate:
+        format_sql: true
   datasource:
     url: jdbc:postgresql://localhost:5332/genielogiciel
     username: gl
@@ -19,3 +22,5 @@ spring:
           google:
             client-id: 1023531572519-0nq22e30vuhket9e1abep99m2tlicc2f.apps.googleusercontent.com
             client-secret: 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
+server:
+  port: 8081
